# ed25519-consensus

./: Cargo.toml
src/: batch.rs  lib.rs  signing_key.rs  verification_key.rs
tests/: batch.rs  small_order.rs
tests/util/: mod.rs
